# rust2go

./: .gitignore  Cargo.toml  Makefile  api.go  api_test.go  filecache.go  filecache_test.go  go.mod  go.sum  instance.go  instance_test.go  readme.md  wasi.go  wasi.wasm  wasmlib.wasm
cmd/: main.go
src/: cmd.rs  lib.rs  main.rs  mem.rs  pure.rs
